<resources>
    <string name="app_name">AutoShare</string>
    <string name="welcome">Welcome</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="search_choose_rent">Search...Choose...Rent</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="username">User Name</string>
    <string name="signinReg">SignIn</string>
    <string name="autoshare">AutoShare</string>
    <string name="pick_up_location">Location</string>
    <string name="from">From : </string>
    <string name="pick_up_date">Pick-Up Date</string>
    <string name="to">To : </string>
    <string name="drop_off_date">Drop-Off Date</string>
    <string name="logout">Logout</string>
    <string name="your_activity">Your Activity</string>
    <string name="contact_no">Contact NO.</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="type_here">Type here ..</string>
    <string name="back_to_profile_page">Back to Profile Page..</string>
    <string name="Save">save</string>
    <string name="upate_your_information">Upate Your Information ..</string>
    <string name="star">star</string>
    <string name="your_activities">Your Activities</string>
    <string name="back">BACK</string>
    <string name="offers">Offers</string>
    <string name="rental_records">Rental Records</string>
    <string name="payment_transactions">Payment Transactions</string>
    <string name="feedback">Feedback</string>
    <string name="back_to_profile">Back to Profile</string>
    <string name="update_your_contact_information">Update Your Contact Information....</string>
    <string name="update">Update</string>
    <string name="ButtonBack">Back</string>
    <string name="search_for_available_cars">Search For Available Cars:</string>
    <string name="click_update_to_update_your_contact_info">Click Update to Update Your Contact Info</string>
    <string name="sign_in">sign in</string>
    <string name="start_your_journey_with_us">Start Your Journey With Us!</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="register_now">Register Now!</string>
    <string name="add_seller">Add Seller</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
</resources>